test/integration/bad/data_index/non_data_index2.stan
parameters {
  array[3] real y;

}
transformed parameters {
  vector[size(y)] z;
}
